// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal no icon 1`] = `
<Fragment>
  <div
    onClick={[Function]}
  >
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-wrapper"
      closeTimeoutMS={400}
      isOpen={true}
      onRequestClose={[Function]}
      overlayClassName="modal-overlay"
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <ContentMock />
    </Modal>
  </div>
</Fragment>
`;

exports[`Modal renders closed 1`] = `
<Fragment>
  <div
    onClick={[Function]}
  >
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-wrapper"
      closeTimeoutMS={400}
      isOpen={false}
      onRequestClose={[Function]}
      overlayClassName="modal-overlay"
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <Close
        onClick={[Function]}
      />
      <ContentMock />
    </Modal>
  </div>
</Fragment>
`;

exports[`Modal renders open 1`] = `
<Fragment>
  <div
    onClick={[Function]}
  >
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-wrapper"
      closeTimeoutMS={400}
      isOpen={true}
      onRequestClose={[Function]}
      overlayClassName="modal-overlay"
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <Close
        onClick={[Function]}
      />
      <ContentMock />
    </Modal>
  </div>
</Fragment>
`;
